# ailia-models-cpp

./: .gitignore  .gitmodules  CMakeLists.txt  Makefile  README.md
.github/workflows/: gcc.yml  msbuild.yml  xcode.yml
arcface/: CMakeLists.txt  arcface.cpp  arcface.sh
audio_processing/clap/: CMakeLists.txt  clap.sh
audio_processing/gpt-sovits/: CMakeLists.txt  gpt-sovits.bat  gpt-sovits.cpp  gpt-sovits.sh
audio_processing/silero-vad/: CMakeLists.txt  silero-vad.bat  silero-vad.cpp  silero-vad.sh
audio_processing/whisper/: CMakeLists.txt  whisper.bat  whisper.cpp  whisper.sh
background_removal/u2net/: CMakeLists.txt  README.md  u2net.bat  u2net.cpp  u2net.sh  u2net_utils.cpp  u2net_utils.h
bert_maskedlm/: CMakeLists.txt  bert_maskedlm.cpp
blazeface/: blazeface_utils.cpp  blazeface_utils.h
clap/: CMakeLists.txt  clap.bat  clap.cpp  clap_utils.cpp  clap_utils.h
clip/: CMakeLists.txt  clip.bat  clip.cpp  clip.sh
face_alignment/: CMakeLists.txt  face_alignment.bat  face_alignment.cpp
face_detection/retinaface/: CMakeLists.txt  retinaface.bat  retinaface.cpp  retinaface.sh
face_detection/yolov3-face/: CMakeLists.txt  yolov3-face.cpp
face_identification/arcface/: CMakeLists.txt  arcface.bat
face_recognition/face_alignment/: CMakeLists.txt  face_alignment.sh
face_recognition/mediapipe_iris/: CMakeLists.txt
fugumt/: CMakeLists.txt  fugumt.cpp
fugumt-en-ja/: CMakeLists.txt  fugumt-en-ja.sh
fugumt-ja-en/: CMakeLists.txt  fugumt-ja-en.bat  fugumt-ja-en.sh
gpt-sovits/: CMakeLists.txt  gpt-sovits.bat  gpt-sovits.cpp  gpt-sovits.sh
image_classification/clip/: CMakeLists.txt  clip.cpp  clip.sh
image_classification/resnet50/: CMakeLists.txt  libailia_blas.dylib  libailia_pose_estimate.dylib  resnet50  resnet50.bat  resnet50.cpp  resnet50_labels.h  resnet50_original
include/: ailia.h  ailia_call.h  ailia_classifier.h  ailia_detector.h  ailia_feature_extractor.h  ailia_format.h  ailia_pose_estimator.h
lightweight-human-pose-estimation/: CMakeLists.txt  lightweight-human-pose-estimation.bat  lightweight-human-pose-estimation.cpp
m2det/: CMakeLists.txt  m2det.bat  m2det.cpp
mediapipe_iris/: CMakeLists.txt  mediapipe_iris.bat  mediapipe_iris.cpp  mediapipe_iris.sh
natural_language_processing/bert_maskedlm/: CMakeLists.txt  bert_maskedlm.bat  bert_maskedlm.cpp  bert_maskedlm.sh
natural_language_processing/fugumt-en-ja/: fugumt-en-ja.bat  fugumt-en-ja.cpp
natural_language_processing/fugumt-ja-en/: CMakeLists.txt  fugumt-ja-en.cpp
natural_language_processing/g2p_en/: CMakeLists.txt  averaged_perceptron.cpp  averaged_perceptron.h  expand.cpp  expand.h  g2p_en.bat  g2p_en.cpp  g2p_en.sh  g2p_en_averaged_perceptron.cpp  g2p_en_averaged_perceptron.h  g2p_en_expand.cpp  g2p_en_expand.h  g2p_en_file.cpp  g2p_en_file.h  g2p_en_model.cpp  g2p_en_model.h
natural_language_processing/multilingual-e5/: CMakeLists.txt  multilingual-e5.bat  multilingual-e5.cpp  multilingual-e5.sh
natural_language_processing/sentence_transformers/: sentence_transformers.cpp
natural_language_processing/soundchoice-g2p/: CMakeLists.txt  soundchoice-g2p.bat  soundchoice-g2p.cpp  soundchoice-g2p.sh
natural_language_processing/t5_whisper_medical/: CMakeLists.txt  t5_whisper_medical.cpp  t5_whisper_medical.sh
object_detection/m2det/: CMakeLists.txt  m2det.bat  m2det.sh
object_detection/yolov3-tiny/: CMakeLists.txt  yolov3-tiny.bat  yolov3-tiny.sh
object_detection/yolox/: CMakeLists.txt  yolox.cpp  yolox.sh
pose_estimation/lightweight-human-pose-estimation/: CMakeLists.txt  lightweight-human-pose-estimation.cpp  lightweight-human-pose-estimation.sh
pyannote-audio/: CMakeLists.txt  pyannote-audio  pyannote-audio.cpp  pyannote-audio.sh
pyannote-audio/pyannote_audio_utils/audio/pipeline/: speaker_diarization.cpp  speaker_diarization.h
pyannote-audio/pyannote_audio_utils/audio/pipeline/utils/: diarization.cpp  diarization.h
pyannote-audio/pyannote_audio_utils/core/: annotation.cpp  annotation.h  feature.cpp  feature.h  segment.cpp  segment.h  timeline.cpp  timeline.h
pyannote-audio/pyannote_audio_utils/core/utils/: generators.cpp  generators.h  types.cpp  types.h
resnet50/: CMakeLists.txt  resnet50.cpp  resnet50.sh
sentence_transformers/: CMakeLists.txt  sentence_transformers.bat  sentence_transformers.cpp  sentence_transformers.sh
silero-vad/: CMakeLists.txt  silero-vad.cpp
t5_whisper_medical/: CMakeLists.txt  t5_whisper_medical.bat  t5_whisper_medical.cpp
u2net/: CMakeLists.txt  README.md  u2net_utils.cpp  u2net_utils.h
util/: ailia_detector_category.h  detector_utils.cpp  detector_utils.h  gdi_loader.cpp  image_utils.cpp  image_utils.h  mat_utils.cpp  mat_utils.h  utils.cpp  utils.h  wave_reader.cpp  wave_reader.h  wave_writer.cpp  wave_writer.h  webcamera_utils.cpp  webcamera_utils.h
whisper/: CMakeLists.txt  whisper.bat  whisper.cpp  whisper.sh
yolov3-face/: CMakeLists.txt  Makefile  yolov3-face.bat  yolov3-face.cpp  yolov3-face.sh
yolov3-tiny/: CMakeLists.txt  ailia_detector_v3.cpp  yolov3-tiny.bat  yolov3-tiny.cpp
yolox/: CMakeLists.txt  yolox.bat  yolox.cpp
